@@ -1,5 +1,6 @@
 0.04
  - Fix requires.
+ - Improve tests.
 
 0.03 2015-10-27T12:12:48+01:00
  - Add EXAMPLE2 example to doc.
